third_party/move/move-vm/transactional-tests/tests/tracing/simple/cast_i256.masm
//# publish
module 0x22::test

public fun cast_i256_instr(): ixg
    ld_i64 -xf
    cast_i256
    ret

//# run --verbose 0x22::test::cast_i256_instr --display-trace
